Kubernetes/service/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: webingress
spec:
  rules:
  - host: mysite.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: websrvc
            port:
              number: 8080
